<resources>
    <string name="app_name">FAaMS</string>
    <string name="full_name">full name</string>
    <string name="FULL_NAME">FULL NAME</string>
    <string name="EMAIL">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="fams">fams</string>
    <string name="famss">FAMS</string>
    <string name="app_tag">Building a secure digital future</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="user_email">user_email</string>
    <string name="Password">passwordss\n</string>
    <string name="password1">password</string>
    <string name="loginb">Login</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="register_line">Not Registered Yet , Sign Up !</string>
    <string name="email">Type your Email</string>
    <string name="already">Already Registered , Login In !</string>
    <string name="tag_line">Building a secure digital life..!</string>
    <string name="Type_your_Email">Type your Email</string>
    <string name="Confirm_your_password">Confirm_pass</string>
    <string name="show_all">Show All</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="no_pdf_file_selected_yet">No PDF File Selected yet !</string>
    <string name="select_pdf">select pdf</string>
    <string name="img_pdf">img pdf</string>
    <string name="fab_description">fab_description</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_all">Share All</string>
    <string name="no_search_results_found">No search results found</string>
    <string name="Type_your_Phone_Number">type ur phno</string>
    <string name="Type_your_Mobile_number">Type your Phone number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="password_constraints">password_constraints</string>
</resources>